code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> command
Rule 1     command -> command SEMICOLON newcommand
Rule 2     command -> newcommand
Rule 3     newcommand -> SKIP
Rule 4     newcommand -> assignment
Rule 5     newcommand -> WHILE bool DO command OD
Rule 6     newcommand -> IF bool THEN command ELSE command FI
Rule 7     assignment -> ID ASSIGN expression
Rule 8     newcommand -> <empty>
Rule 9     expression -> expression PLUS term
Rule 10    expression -> expression MINUS term
Rule 11    expression -> term
Rule 12    term -> term TIMES factor
Rule 13    term -> factor
Rule 14    factor -> INT
Rule 15    factor -> ID
Rule 16    factor -> PLUS INT
Rule 17    factor -> MINUS INT
Rule 18    factor -> LPAREN expression RPAREN
Rule 19    bool -> bool OR newbool
Rule 20    bool -> newbool
Rule 21    newbool -> newbool AND fbool
Rule 22    newbool -> fbool
Rule 23    fbool -> expression GREATER expression
Rule 24    fbool -> expression LESS expression
Rule 25    fbool -> expression GREATEREQUAL expression
Rule 26    fbool -> expression LESSEQUAL expression
Rule 27    fbool -> expression EQUAL expression
Rule 28    fbool -> NOT LPAREN bool RPAREN
Rule 29    fbool -> TRUE
Rule 30    fbool -> FALSE

Terminals, with rules where they appear

AND                  : 21
ASSIGN               : 7
COMMENT              : 
DO                   : 5
ELSE                 : 6
EQUAL                : 27
FALSE                : 30
FI                   : 6
GREATER              : 23
GREATEREQUAL         : 25
ID                   : 7 15
IF                   : 6
INT                  : 14 16 17
LESS                 : 24
LESSEQUAL            : 26
LPAREN               : 18 28
MINUS                : 10 17
NOT                  : 28
OD                   : 5
OR                   : 19
PLUS                 : 9 16
RPAREN               : 18 28
SEMICOLON            : 1
SKIP                 : 3
THEN                 : 6
TIMES                : 12
TRUE                 : 29
WHILE                : 5
error                : 

Nonterminals, with rules where they appear

assignment           : 4
bool                 : 5 6 19 28
command              : 1 5 6 6 0
expression           : 7 9 10 18 23 23 24 24 25 25 26 26 27 27
factor               : 12 13
fbool                : 21 22
newbool              : 19 20 21
newcommand           : 1 2
term                 : 9 10 11 12

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . command SEMICOLON newcommand
    (2) command -> . newcommand
    (3) newcommand -> . SKIP
    (4) newcommand -> . assignment
    (5) newcommand -> . WHILE bool DO command OD
    (6) newcommand -> . IF bool THEN command ELSE command FI
    (8) newcommand -> .
    (7) assignment -> . ID ASSIGN expression

    SKIP            shift and go to state 3
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    SEMICOLON       reduce using rule 8 (newcommand -> .)
    $end            reduce using rule 8 (newcommand -> .)
    ID              shift and go to state 7

    command                        shift and go to state 1
    newcommand                     shift and go to state 2
    assignment                     shift and go to state 4

state 1

    (0) S' -> command .
    (1) command -> command . SEMICOLON newcommand

    SEMICOLON       shift and go to state 8


state 2

    (2) command -> newcommand .

    SEMICOLON       reduce using rule 2 (command -> newcommand .)
    $end            reduce using rule 2 (command -> newcommand .)
    OD              reduce using rule 2 (command -> newcommand .)
    ELSE            reduce using rule 2 (command -> newcommand .)
    FI              reduce using rule 2 (command -> newcommand .)


state 3

    (3) newcommand -> SKIP .

    SEMICOLON       reduce using rule 3 (newcommand -> SKIP .)
    $end            reduce using rule 3 (newcommand -> SKIP .)
    OD              reduce using rule 3 (newcommand -> SKIP .)
    ELSE            reduce using rule 3 (newcommand -> SKIP .)
    FI              reduce using rule 3 (newcommand -> SKIP .)


state 4

    (4) newcommand -> assignment .

    SEMICOLON       reduce using rule 4 (newcommand -> assignment .)
    $end            reduce using rule 4 (newcommand -> assignment .)
    OD              reduce using rule 4 (newcommand -> assignment .)
    ELSE            reduce using rule 4 (newcommand -> assignment .)
    FI              reduce using rule 4 (newcommand -> assignment .)


state 5

    (5) newcommand -> WHILE . bool DO command OD
    (19) bool -> . bool OR newbool
    (20) bool -> . newbool
    (21) newbool -> . newbool AND fbool
    (22) newbool -> . fbool
    (23) fbool -> . expression GREATER expression
    (24) fbool -> . expression LESS expression
    (25) fbool -> . expression GREATEREQUAL expression
    (26) fbool -> . expression LESSEQUAL expression
    (27) fbool -> . expression EQUAL expression
    (28) fbool -> . NOT LPAREN bool RPAREN
    (29) fbool -> . TRUE
    (30) fbool -> . FALSE
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    bool                           shift and go to state 9
    newbool                        shift and go to state 10
    fbool                          shift and go to state 11
    expression                     shift and go to state 12
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 6

    (6) newcommand -> IF . bool THEN command ELSE command FI
    (19) bool -> . bool OR newbool
    (20) bool -> . newbool
    (21) newbool -> . newbool AND fbool
    (22) newbool -> . fbool
    (23) fbool -> . expression GREATER expression
    (24) fbool -> . expression LESS expression
    (25) fbool -> . expression GREATEREQUAL expression
    (26) fbool -> . expression LESSEQUAL expression
    (27) fbool -> . expression EQUAL expression
    (28) fbool -> . NOT LPAREN bool RPAREN
    (29) fbool -> . TRUE
    (30) fbool -> . FALSE
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    bool                           shift and go to state 23
    newbool                        shift and go to state 10
    fbool                          shift and go to state 11
    expression                     shift and go to state 12
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 7

    (7) assignment -> ID . ASSIGN expression

    ASSIGN          shift and go to state 24


state 8

    (1) command -> command SEMICOLON . newcommand
    (3) newcommand -> . SKIP
    (4) newcommand -> . assignment
    (5) newcommand -> . WHILE bool DO command OD
    (6) newcommand -> . IF bool THEN command ELSE command FI
    (8) newcommand -> .
    (7) assignment -> . ID ASSIGN expression

    SKIP            shift and go to state 3
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    SEMICOLON       reduce using rule 8 (newcommand -> .)
    $end            reduce using rule 8 (newcommand -> .)
    OD              reduce using rule 8 (newcommand -> .)
    ELSE            reduce using rule 8 (newcommand -> .)
    FI              reduce using rule 8 (newcommand -> .)
    ID              shift and go to state 7

    newcommand                     shift and go to state 25
    assignment                     shift and go to state 4

state 9

    (5) newcommand -> WHILE bool . DO command OD
    (19) bool -> bool . OR newbool

    DO              shift and go to state 26
    OR              shift and go to state 27


state 10

    (20) bool -> newbool .
    (21) newbool -> newbool . AND fbool

    DO              reduce using rule 20 (bool -> newbool .)
    OR              reduce using rule 20 (bool -> newbool .)
    THEN            reduce using rule 20 (bool -> newbool .)
    RPAREN          reduce using rule 20 (bool -> newbool .)
    AND             shift and go to state 28


state 11

    (22) newbool -> fbool .

    AND             reduce using rule 22 (newbool -> fbool .)
    DO              reduce using rule 22 (newbool -> fbool .)
    OR              reduce using rule 22 (newbool -> fbool .)
    THEN            reduce using rule 22 (newbool -> fbool .)
    RPAREN          reduce using rule 22 (newbool -> fbool .)


state 12

    (23) fbool -> expression . GREATER expression
    (24) fbool -> expression . LESS expression
    (25) fbool -> expression . GREATEREQUAL expression
    (26) fbool -> expression . LESSEQUAL expression
    (27) fbool -> expression . EQUAL expression
    (9) expression -> expression . PLUS term
    (10) expression -> expression . MINUS term

    GREATER         shift and go to state 29
    LESS            shift and go to state 30
    GREATEREQUAL    shift and go to state 31
    LESSEQUAL       shift and go to state 32
    EQUAL           shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35


state 13

    (28) fbool -> NOT . LPAREN bool RPAREN

    LPAREN          shift and go to state 36


state 14

    (18) factor -> LPAREN . expression RPAREN
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 37
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 15

    (29) fbool -> TRUE .

    AND             reduce using rule 29 (fbool -> TRUE .)
    DO              reduce using rule 29 (fbool -> TRUE .)
    OR              reduce using rule 29 (fbool -> TRUE .)
    THEN            reduce using rule 29 (fbool -> TRUE .)
    RPAREN          reduce using rule 29 (fbool -> TRUE .)


state 16

    (30) fbool -> FALSE .

    AND             reduce using rule 30 (fbool -> FALSE .)
    DO              reduce using rule 30 (fbool -> FALSE .)
    OR              reduce using rule 30 (fbool -> FALSE .)
    THEN            reduce using rule 30 (fbool -> FALSE .)
    RPAREN          reduce using rule 30 (fbool -> FALSE .)


state 17

    (16) factor -> PLUS . INT

    INT             shift and go to state 38


state 18

    (11) expression -> term .
    (12) term -> term . TIMES factor

    GREATER         reduce using rule 11 (expression -> term .)
    LESS            reduce using rule 11 (expression -> term .)
    GREATEREQUAL    reduce using rule 11 (expression -> term .)
    LESSEQUAL       reduce using rule 11 (expression -> term .)
    EQUAL           reduce using rule 11 (expression -> term .)
    PLUS            reduce using rule 11 (expression -> term .)
    MINUS           reduce using rule 11 (expression -> term .)
    RPAREN          reduce using rule 11 (expression -> term .)
    SEMICOLON       reduce using rule 11 (expression -> term .)
    $end            reduce using rule 11 (expression -> term .)
    OD              reduce using rule 11 (expression -> term .)
    ELSE            reduce using rule 11 (expression -> term .)
    FI              reduce using rule 11 (expression -> term .)
    AND             reduce using rule 11 (expression -> term .)
    DO              reduce using rule 11 (expression -> term .)
    OR              reduce using rule 11 (expression -> term .)
    THEN            reduce using rule 11 (expression -> term .)
    TIMES           shift and go to state 39


state 19

    (17) factor -> MINUS . INT

    INT             shift and go to state 40


state 20

    (13) term -> factor .

    TIMES           reduce using rule 13 (term -> factor .)
    GREATER         reduce using rule 13 (term -> factor .)
    LESS            reduce using rule 13 (term -> factor .)
    GREATEREQUAL    reduce using rule 13 (term -> factor .)
    LESSEQUAL       reduce using rule 13 (term -> factor .)
    EQUAL           reduce using rule 13 (term -> factor .)
    PLUS            reduce using rule 13 (term -> factor .)
    MINUS           reduce using rule 13 (term -> factor .)
    RPAREN          reduce using rule 13 (term -> factor .)
    SEMICOLON       reduce using rule 13 (term -> factor .)
    $end            reduce using rule 13 (term -> factor .)
    OD              reduce using rule 13 (term -> factor .)
    ELSE            reduce using rule 13 (term -> factor .)
    FI              reduce using rule 13 (term -> factor .)
    AND             reduce using rule 13 (term -> factor .)
    DO              reduce using rule 13 (term -> factor .)
    OR              reduce using rule 13 (term -> factor .)
    THEN            reduce using rule 13 (term -> factor .)


state 21

    (14) factor -> INT .

    TIMES           reduce using rule 14 (factor -> INT .)
    GREATER         reduce using rule 14 (factor -> INT .)
    LESS            reduce using rule 14 (factor -> INT .)
    GREATEREQUAL    reduce using rule 14 (factor -> INT .)
    LESSEQUAL       reduce using rule 14 (factor -> INT .)
    EQUAL           reduce using rule 14 (factor -> INT .)
    PLUS            reduce using rule 14 (factor -> INT .)
    MINUS           reduce using rule 14 (factor -> INT .)
    RPAREN          reduce using rule 14 (factor -> INT .)
    SEMICOLON       reduce using rule 14 (factor -> INT .)
    $end            reduce using rule 14 (factor -> INT .)
    OD              reduce using rule 14 (factor -> INT .)
    ELSE            reduce using rule 14 (factor -> INT .)
    FI              reduce using rule 14 (factor -> INT .)
    AND             reduce using rule 14 (factor -> INT .)
    DO              reduce using rule 14 (factor -> INT .)
    OR              reduce using rule 14 (factor -> INT .)
    THEN            reduce using rule 14 (factor -> INT .)


state 22

    (15) factor -> ID .

    TIMES           reduce using rule 15 (factor -> ID .)
    GREATER         reduce using rule 15 (factor -> ID .)
    LESS            reduce using rule 15 (factor -> ID .)
    GREATEREQUAL    reduce using rule 15 (factor -> ID .)
    LESSEQUAL       reduce using rule 15 (factor -> ID .)
    EQUAL           reduce using rule 15 (factor -> ID .)
    PLUS            reduce using rule 15 (factor -> ID .)
    MINUS           reduce using rule 15 (factor -> ID .)
    RPAREN          reduce using rule 15 (factor -> ID .)
    SEMICOLON       reduce using rule 15 (factor -> ID .)
    $end            reduce using rule 15 (factor -> ID .)
    OD              reduce using rule 15 (factor -> ID .)
    ELSE            reduce using rule 15 (factor -> ID .)
    FI              reduce using rule 15 (factor -> ID .)
    AND             reduce using rule 15 (factor -> ID .)
    DO              reduce using rule 15 (factor -> ID .)
    OR              reduce using rule 15 (factor -> ID .)
    THEN            reduce using rule 15 (factor -> ID .)


state 23

    (6) newcommand -> IF bool . THEN command ELSE command FI
    (19) bool -> bool . OR newbool

    THEN            shift and go to state 41
    OR              shift and go to state 27


state 24

    (7) assignment -> ID ASSIGN . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 42
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 25

    (1) command -> command SEMICOLON newcommand .

    SEMICOLON       reduce using rule 1 (command -> command SEMICOLON newcommand .)
    $end            reduce using rule 1 (command -> command SEMICOLON newcommand .)
    OD              reduce using rule 1 (command -> command SEMICOLON newcommand .)
    ELSE            reduce using rule 1 (command -> command SEMICOLON newcommand .)
    FI              reduce using rule 1 (command -> command SEMICOLON newcommand .)


state 26

    (5) newcommand -> WHILE bool DO . command OD
    (1) command -> . command SEMICOLON newcommand
    (2) command -> . newcommand
    (3) newcommand -> . SKIP
    (4) newcommand -> . assignment
    (5) newcommand -> . WHILE bool DO command OD
    (6) newcommand -> . IF bool THEN command ELSE command FI
    (8) newcommand -> .
    (7) assignment -> . ID ASSIGN expression

    SKIP            shift and go to state 3
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    OD              reduce using rule 8 (newcommand -> .)
    SEMICOLON       reduce using rule 8 (newcommand -> .)
    ID              shift and go to state 7

    command                        shift and go to state 43
    newcommand                     shift and go to state 2
    assignment                     shift and go to state 4

state 27

    (19) bool -> bool OR . newbool
    (21) newbool -> . newbool AND fbool
    (22) newbool -> . fbool
    (23) fbool -> . expression GREATER expression
    (24) fbool -> . expression LESS expression
    (25) fbool -> . expression GREATEREQUAL expression
    (26) fbool -> . expression LESSEQUAL expression
    (27) fbool -> . expression EQUAL expression
    (28) fbool -> . NOT LPAREN bool RPAREN
    (29) fbool -> . TRUE
    (30) fbool -> . FALSE
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    newbool                        shift and go to state 44
    fbool                          shift and go to state 11
    expression                     shift and go to state 12
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 28

    (21) newbool -> newbool AND . fbool
    (23) fbool -> . expression GREATER expression
    (24) fbool -> . expression LESS expression
    (25) fbool -> . expression GREATEREQUAL expression
    (26) fbool -> . expression LESSEQUAL expression
    (27) fbool -> . expression EQUAL expression
    (28) fbool -> . NOT LPAREN bool RPAREN
    (29) fbool -> . TRUE
    (30) fbool -> . FALSE
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    fbool                          shift and go to state 45
    expression                     shift and go to state 12
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 29

    (23) fbool -> expression GREATER . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 46
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 30

    (24) fbool -> expression LESS . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 47
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 31

    (25) fbool -> expression GREATEREQUAL . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 48
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 32

    (26) fbool -> expression LESSEQUAL . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 49
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 33

    (27) fbool -> expression EQUAL . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 50
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 34

    (9) expression -> expression PLUS . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    term                           shift and go to state 51
    factor                         shift and go to state 20

state 35

    (10) expression -> expression MINUS . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    term                           shift and go to state 52
    factor                         shift and go to state 20

state 36

    (28) fbool -> NOT LPAREN . bool RPAREN
    (19) bool -> . bool OR newbool
    (20) bool -> . newbool
    (21) newbool -> . newbool AND fbool
    (22) newbool -> . fbool
    (23) fbool -> . expression GREATER expression
    (24) fbool -> . expression LESS expression
    (25) fbool -> . expression GREATEREQUAL expression
    (26) fbool -> . expression LESSEQUAL expression
    (27) fbool -> . expression EQUAL expression
    (28) fbool -> . NOT LPAREN bool RPAREN
    (29) fbool -> . TRUE
    (30) fbool -> . FALSE
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 13
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    bool                           shift and go to state 53
    newbool                        shift and go to state 10
    fbool                          shift and go to state 11
    expression                     shift and go to state 12
    term                           shift and go to state 18
    factor                         shift and go to state 20

state 37

    (18) factor -> LPAREN expression . RPAREN
    (9) expression -> expression . PLUS term
    (10) expression -> expression . MINUS term

    RPAREN          shift and go to state 54
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35


state 38

    (16) factor -> PLUS INT .

    TIMES           reduce using rule 16 (factor -> PLUS INT .)
    GREATER         reduce using rule 16 (factor -> PLUS INT .)
    LESS            reduce using rule 16 (factor -> PLUS INT .)
    GREATEREQUAL    reduce using rule 16 (factor -> PLUS INT .)
    LESSEQUAL       reduce using rule 16 (factor -> PLUS INT .)
    EQUAL           reduce using rule 16 (factor -> PLUS INT .)
    PLUS            reduce using rule 16 (factor -> PLUS INT .)
    MINUS           reduce using rule 16 (factor -> PLUS INT .)
    RPAREN          reduce using rule 16 (factor -> PLUS INT .)
    SEMICOLON       reduce using rule 16 (factor -> PLUS INT .)
    $end            reduce using rule 16 (factor -> PLUS INT .)
    OD              reduce using rule 16 (factor -> PLUS INT .)
    ELSE            reduce using rule 16 (factor -> PLUS INT .)
    FI              reduce using rule 16 (factor -> PLUS INT .)
    AND             reduce using rule 16 (factor -> PLUS INT .)
    DO              reduce using rule 16 (factor -> PLUS INT .)
    OR              reduce using rule 16 (factor -> PLUS INT .)
    THEN            reduce using rule 16 (factor -> PLUS INT .)


state 39

    (12) term -> term TIMES . factor
    (14) factor -> . INT
    (15) factor -> . ID
    (16) factor -> . PLUS INT
    (17) factor -> . MINUS INT
    (18) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 21
    ID              shift and go to state 22
    PLUS            shift and go to state 17
    MINUS           shift and go to state 19
    LPAREN          shift and go to state 14

    factor                         shift and go to state 55

state 40

    (17) factor -> MINUS INT .

    TIMES           reduce using rule 17 (factor -> MINUS INT .)
    GREATER         reduce using rule 17 (factor -> MINUS INT .)
    LESS            reduce using rule 17 (factor -> MINUS INT .)
    GREATEREQUAL    reduce using rule 17 (factor -> MINUS INT .)
    LESSEQUAL       reduce using rule 17 (factor -> MINUS INT .)
    EQUAL           reduce using rule 17 (factor -> MINUS INT .)
    PLUS            reduce using rule 17 (factor -> MINUS INT .)
    MINUS           reduce using rule 17 (factor -> MINUS INT .)
    RPAREN          reduce using rule 17 (factor -> MINUS INT .)
    SEMICOLON       reduce using rule 17 (factor -> MINUS INT .)
    $end            reduce using rule 17 (factor -> MINUS INT .)
    OD              reduce using rule 17 (factor -> MINUS INT .)
    ELSE            reduce using rule 17 (factor -> MINUS INT .)
    FI              reduce using rule 17 (factor -> MINUS INT .)
    AND             reduce using rule 17 (factor -> MINUS INT .)
    DO              reduce using rule 17 (factor -> MINUS INT .)
    OR              reduce using rule 17 (factor -> MINUS INT .)
    THEN            reduce using rule 17 (factor -> MINUS INT .)


state 41

    (6) newcommand -> IF bool THEN . command ELSE command FI
    (1) command -> . command SEMICOLON newcommand
    (2) command -> . newcommand
    (3) newcommand -> . SKIP
    (4) newcommand -> . assignment
    (5) newcommand -> . WHILE bool DO command OD
    (6) newcommand -> . IF bool THEN command ELSE command FI
    (8) newcommand -> .
    (7) assignment -> . ID ASSIGN expression

    SKIP            shift and go to state 3
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    ELSE            reduce using rule 8 (newcommand -> .)
    SEMICOLON       reduce using rule 8 (newcommand -> .)
    ID              shift and go to state 7
